2008-02-12  Mike Krüger <mkrueger@novell.com> 

	* CSharpSyntaxMode.xml, Mono.TextEditor/LineSplitter.cs,
	  Mono.TextEditor/TextMarker.cs, Mono.TextEditor/TextEditor.cs,
	  Mono.TextEditor/LineSegment.cs,
	  Mono.TextEditor.Highlighting/SyntaxMode.cs,
	  Mono.TextEditor.Highlighting/SyntaxModeService.cs,
	  Mono.TextEditor.Highlighting/Rule.cs: Started support for semantic
	  highlighting. Urls+email addresses in comments and strings are
	  highlighted.
	
	  (Yes I know that THIS doesn't need to be done with semantic
	  highlighting, but I need to test it out somewhere)

2008-02-12  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextViewMargin.cs, Mono.TextEditor/Document.cs,
	  Mono.TextEditor/FoldMarkerMargin.cs, Mono.TextEditor/BookmarkMargin.cs,
	  Mono.TextEditor/GutterMargin.cs,
	  Mono.TextEditor.Highlighting/SyntaxModeService.cs: Worked on memory
	  management.

2008-02-12  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextViewMargin.cs, Mono.TextEditor/Document.cs,
	  Mono.TextEditor/LineSegment.cs,
	  Mono.TextEditor.Highlighting/SyntaxModeService.cs: Syntax highlighting
	  update is now faster. (produced too many redraws)

2008-02-11  Mike Krüger <mkrueger@novell.com> 

	* TangoLightStyle.xml, Mono.TextEditor.Highlighting/Style.cs, C64Style.xml:
	  Reversed bookmark color.

2008-02-11  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/DefaultEditActions.cs, Mono.TextEditor/TextViewMargin.cs,
	  Mono.TextEditor/TextEditor.cs: Middle mouse button paste now works.

2008-02-11  Mike Krüger <mkrueger@novell.com> 

	* TangoLightStyle.xml, Mono.TextEditor.mdp, bookmark.png, OblivionStyle.xml,
	  UbuntuStyle.xml, Mono.TextEditor/TextViewMargin.cs,
	  Mono.TextEditor/Document.cs, Mono.TextEditor/FoldMarkerMargin.cs,
	  Mono.TextEditor/IMargin.cs, Mono.TextEditor/TextEditor.cs,
	  Mono.TextEditor/BookmarkMargin.cs, Mono.TextEditor/TextEditorOptions.cs,
	  Mono.TextEditor/GutterMargin.cs, Mono.TextEditor.Highlighting/Style.cs,