@@ -70,6 +70,7 @@
     <File name="Mono.TextEditor.Highlighting/Marker.cs" subtype="Code" buildaction="Compile" />
     <File name="UbuntuStyle.xml" subtype="Code" buildaction="EmbedAsResource" />
     <File name="Mono.TextEditor/TextViewMargin.cs" subtype="Code" buildaction="Compile" />
+    <File name="Mono.TextEditor.Highlighting/SemanticRule.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
