@@ -1,5 +1,14 @@
 2008-02-12  Mike Krüger <mkrueger@novell.com> 
 
+	* Mono.TextEditor.mdp, Mono.TextEditor/Document.cs,
+	  Mono.TextEditor.Highlighting/SyntaxMode.cs,
+	  Mono.TextEditor.Highlighting/SemanticRule.cs,
+	  Mono.TextEditor.Highlighting/SyntaxModeService.cs,
+	  Mono.TextEditor.Highlighting/Rule.cs, Makefile.am: Worked on semantic
+	  highlighting.
+
+2008-02-12  Mike Krüger <mkrueger@novell.com> 
+
 	* CSharpSyntaxMode.xml, Mono.TextEditor/LineSplitter.cs,
 	  Mono.TextEditor/TextMarker.cs, Mono.TextEditor/TextEditor.cs,
 	  Mono.TextEditor/LineSegment.cs,
